[RED] Modified tests for DoctorProfile REST API controller to implement read only methods and service functions returning dto responses